--- a/Todo-App/src/App.css
+++ b/Todo-App/src/App.css
@@ -20,7 +20,7 @@
 .input-box input {
   width: 100%;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid #000;
   border-radius: 4px;
   outline: none;
 }
@@ -31,7 +31,7 @@
   gap: 10px;
 }
 
-.button-box button {
+.button-box button, .table td button {
   padding: 10px 20px;
   background-color: #007bff;
   color: #fff;
@@ -51,14 +51,14 @@
   margin-top: 20px;
 }
 
-.table th, .table td {
+.table th, .table td, .table td button {
   border: 1px solid #ddd;
   padding: 8px;
-  text-align: left;
+  text-align: center;
 }
 
 .table th {
-  background-color: #f2f2f2;
+  background-color: #bab6b6;
 }
 
 /* Style table rows on hover */
